<resources>
    <string name="app_name">RSS Feed Reader</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">Show more</string>
    <string name="saveToCollection">Save to collection</string>
    <string name="favorites">Favorites</string>
    <string name="all">All</string>
    <string name="addFeed">Add feed</string>
    <string name="add_feed">Add feed</string>
    <string name="urlToFeed">URL to feed</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="all_news">All news</string>
    <string name="favorite_news">Favorite news</string>
    <string name="filtering_news">Filtering news</string>
    <string name="by">by %s | %s</string>
    <string name="back">Back</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="share">Share</string>
    <string name="feed_icon">Feed icon</string>
    <string name="delete_feed">Delete feed</string>
    <string name="feed_already_exists">Feed already exists</string>
    <string name="markAsRead">Mark as read</string>
    <string name="markAsUnread">Mark as unread</string>
    <string name="go_to_feed">Go to feed</string>
    <string name="showDetails">Show details</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="invalid_rss_feed">Invalid RSS feed</string>
    <string name="list_is_empty">List is empty</string>
    <string name="filter_news">Filter news</string>
</resources>