<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="@dimen/filter_news_card_elevation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_all"
                    android:layout_width="@dimen/filter_news_image_width"
                    android:layout_height="@dimen/filter_news_image_height"
                    android:layout_marginEnd="@dimen/filter_news_image_margin_end"
                    android:layout_marginStart="@dimen/filter_news_image_margin_start"
                    android:layout_marginTop="@dimen/filter_news_image_margin_top"
                    android:layout_marginBottom="@dimen/filter_news_image_margin_bottom"
                    android:contentDescription="@string/feed_icon"
                    android:src="@drawable/ic_rss_feed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="@dimen/filter_news_text_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/filter_news_text_margin_start"
                    android:layout_marginTop="@dimen/filter_news_text_margin_top"
                    android:layout_marginEnd="@dimen/filter_news_text_margin_end"
                    android:layout_marginBottom="@dimen/filter_news_text_margin_bottom"
                    android:text="@string/all"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon_all"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="@dimen/filter_news_card_elevation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_favorites"
                    android:layout_width="@dimen/filter_news_image_width"
                    android:layout_height="@dimen/filter_news_image_height"
                    android:layout_marginStart="@dimen/filter_news_image_margin_start"
                    android:layout_marginEnd="@dimen/filter_news_image_margin_end"
                    android:layout_marginTop="@dimen/filter_news_image_margin_top"
                    android:layout_marginBottom="@dimen/filter_news_image_margin_bottom"
                    android:contentDescription="@string/feed_icon"
                    android:src="@drawable/ic_like_filled"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="@dimen/filter_news_text_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/filter_news_text_margin_start"
                    android:layout_marginTop="@dimen/filter_news_text_margin_top"
                    android:layout_marginEnd="@dimen/filter_news_text_margin_end"
                    android:layout_marginBottom="@dimen/filter_news_text_margin_bottom"
                    android:text="@string/favorites"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon_favorites"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>

</layout>